--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h1>Jiaqi Min (闵家祺) </h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://jiaqi.github.io/"><img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
+<a href="https://fhoneysuckle.github.io/"><img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
 <td align="left"><p><b>Postgraduate Student, </b> <br />
 Statistics and Causal Inference, <b>Beijing Technology and Business University</b> <br />
 Beijing, China <br /> 
