--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
 <h1>Jiaqi Min (闵家祺) </h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://fhoneysuckle.github.io/"><img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
+<img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
 <td align="left"><p><b>Postgraduate Student, </b> <br />
-Statistics and Causal Inference, <b>Beijing Technology and Business University</b> <br />
-Beijing, China <br /> 
+<a href="https://stxy.btbu.edu.cn/tzgg/index.htm">School of Mathematics and Statistics </a> and <a href="https://btbu-causality.group/">Causal Inference Group</a>, <br />
+Beijing Technology and Business University <br />
+Beijing, China, 102488 <br /> 
 E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I received my B.S. degree in Statistics from Central South University in 2018, and I am currently pursuing my M.S. degree in Statistics at Beijing Technology and Business University (expected graduation in 2025).
+<p>I received my B.S. degree in Statistics from Central South University in 2022, and I am currently pursuing my M.S. degree in Statistics at Beijing Technology and Business University (expected graduation in 2025).
 <br/><p>
 My research primarily focuses on causal inference, with particular emphasis on causal effect identification and estimation in the presence of unmeasured confounding.</p>
+<p>
+I currently hope to combine FDR control and causal inference, please contact me if you are interested.</p>
 <h2>Research</h2>
 <h3>Research interests</h3>
 <ul>
@@ -60,10 +63,10 @@ My research primarily focuses on causal inference, with particular emphasis on c
 </ol>
 <h3>Recent publications </h3>
 <ol>
-<li><p>Shanshan Luo#, <b>Jiaqi Min</b>, Wei Li, Xueli Wang*, Zhi Geng,  "A comparative analysis of different adjustment sets using propensity score based estimators",  <i>Computational Statistics & Data Analysis</i> , 2024. [<a href="pub/Adjustment sets.pdf">pdf</a>]</p>
+<li><p>Shanshan Luo#, <b>Jiaqi Min</b>, Wei Li, Xueli Wang*, Zhi Geng,  "<a href="https://www.sciencedirect.com/science/article/abs/pii/S0167947324001634">A comparative analysis of different adjustment sets using propensity score based estimators</a>",  <i>Computational Statistics & Data Analysis</i> , 2024.</p>
 </li>
 </ol>
-<p><b>Note</b>: # indicates my current advisor.</p>
+<p><b>Note</b>: # indicates my advisor.</p>
 <p><b>Note</b>: * indicates the corresponding author.</p>
 <h2>Projects</h2>
 <ol>
