--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ I currently hope to combine FDR control and causal inference, please contact me 
 <li><p>Main Courses: Advanced Mathematical Statistics, Causal Inference, Semiparametric Theory and Missing Data, Asymptotic Theory, Time Series Analysis, Complex Data Analysis, Applied Stochastic Process</p>
 </li>
 </ul>
-<h2>HONORS AND AWARDS</h2>
+<h2>Honors and Awards</h2>
 <h3>Graduate Honors (Beijing Technology and Business University)</h3>
 <ul>
 <li><p>Outstanding Student Awards and Scholarships</p>
