--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="https://scholar.google.com.hk/citations?user=xaS70k0AAAAJ&hl=zh-CN">Google Scholar</a></div>
 <div class="menu-item"><a href="https://github.com/Fhoneysuckle">GitHub</a></div>
-
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Jiaqi Min (闵家祺) </h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
+<img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" />&nbsp;</td>
 <td align="left"><p><b>Postgraduate Student, </b> <br />
 <a href="https://stxy.btbu.edu.cn/tzgg/index.htm">School of Mathematics and Statistics </a> and <a href="https://btbu-causality.group/">Causal Inference Group</a>, <br />
 Beijing Technology and Business University <br />
@@ -32,11 +31,8 @@ Beijing, China, 102488 <br />
 E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I received my B.S. degree in Statistics from Central South University in 2022, and I am currently pursuing my M.S. degree in Statistics at Beijing Technology and Business University (expected graduation in 2025).
-<br/><p>
-My research primarily focuses on causal inference, with particular emphasis on causal effect identification and estimation in the presence of unmeasured confounding.</p>
-<p>
-I currently hope to combine FDR control and causal inference, please contact me if you are interested.</p>
+<p>I received my B.S. degree in Statistics from Central South University in 2022, and I am currently pursuing my M.S. degree in Statistics at Beijing Technology and Business University (expected graduation in 2025). My research primarily focuses on causal inference, with particular emphasis on causal effect identification and estimation in the presence of unmeasured confounding.</p>
+<p>I currently hope to combine FDR control and causal inference, please contact me if you are interested.</p>
 <h2>Research</h2>
 <h3>Research interests</h3>
 <ul>
@@ -46,66 +42,59 @@ I currently hope to combine FDR control and causal inference, please contact me 
     <li>Semiparametric Theory</li>
     <li>Bi-direction Casual Model</li>
     </ul>
-</p>
-<li><p>False Discovery Rate (FDR) Control</p>
-</li>
+</p></li>
+<li><p>False Discovery Rate (FDR) Control</p></li>
 </ul>
+
 <h3>Working papers</h3>
 <ul>
-<li><p>Bidirectional Causal Inference with Application</p>
-</li>
-<li><p>Identification and Estimation of Causal Effects in the Presence of Uninformative Contaminated Data</p>
-</li>
+<li><p>Bidirectional Causal Inference with Application</p></li>
+<li><p>Identification and Estimation of Causal Effects in the Presence of Uninformative Contaminated Data</p></li>
 </ul>
+
 <h3>Under review</h3>
 <ol>
-<li><p>To be continued</p>
+<li><p>To be continued</p></li>
 </ol>
 <h3>Recent publications </h3>
 <ol>
-<li><p>Shanshan Luo#, <b>Jiaqi Min</b>, Wei Li, Xueli Wang*, Zhi Geng,  "<a href="https://www.sciencedirect.com/science/article/abs/pii/S0167947324001634">A comparative analysis of different adjustment sets using propensity score based estimators</a>",  <i>Computational Statistics & Data Analysis</i> , 2024.</p>
-</li>
+<li><p>Shanshan Luo#, <b>Jiaqi Min</b>, Wei Li, Xueli Wang*, Zhi Geng,  "<a href="https://www.sciencedirect.com/science/article/abs/pii/S0167947324001634">A comparative analysis of different adjustment sets using propensity score based estimators</a>",  <i>Computational Statistics & Data Analysis</i> , 2024.</p></li>
 </ol>
 <p><b>Note</b>: # indicates my advisor.</p>
 <p><b>Note</b>: * indicates the corresponding author.</p>
 <h2>Projects</h2>
 <ol>
-<li><p>COVID-19 Data Visualization Platform Based on R Shiny, 09.2020-12.2020</p></li>
+<li><p>COVID-19 Data Visualization Platform Based on R Shiny, 09.2020-12.2020</p>
 <ul>
-<li><p>Developed an interactive web application to dynamically visualize global COVID-19 statistics including confirmed cases, deaths, and recoveries</p>
-</li>
-<li><p>Implemented spatio-temporal analysis to provide epidemic control recommendations based on regional differences</p>
-</li>
-<li><p>Utilized R Shiny framework to create an intuitive and responsive user interface for real-time data exploration</p>
-</li>
+<li><p>Developed an interactive web application to dynamically visualize global COVID-19 statistics including confirmed cases, deaths, and recoveries</p></li>
+<li><p>Implemented spatio-temporal analysis to provide epidemic control recommendations based on regional differences</p></li>
+<li><p>Utilized R Shiny framework to create an intuitive and responsive user interface for real-time data exploration</p></li>
 </ul>
-<li><p>Locust Density Prediction Based on ArcGIS and MATLAB (Provincial Innovation Competition Project), 07.2020-06.2021</p></li>
+</li>
+<li><p>Locust Density Prediction Based on ArcGIS and MATLAB (Provincial Innovation Competition Project), 07.2020-06.2021</p>
 <ul>
-<li><p>Integrated ArcGIS procedures with MATLAB to develop a comprehensive locust density prediction model using geographical data</p>
-</li>
+<li><p>Integrated ArcGIS procedures with MATLAB to develop a comprehensive locust density prediction model using geographical data</p></li>
 </ul>
-<li><p>Implementation and Analysis of FDR Control Methods, 01.2022-06.2022</p></li>
+</li>
+<li><p>Implementation and Analysis of FDR Control Methods, 01.2022-06.2022</p>
 <ul>
-<li><p>Applied existing FDR control framework with modified functions</p>
-</li>
-<li><p>Conducted comparative analysis between different statistical constructions in FDR control</p>
-</li>
-<li><p>Evaluated the performance of various data splitting methods in variable selection</p>
-</li>
+<li><p>Applied existing FDR control framework with modified functions</p></li>
+<li><p>Conducted comparative analysis between different statistical constructions in FDR control</p></li>
+<li><p>Evaluated the performance of various data splitting methods in variable selection</p></li>
 </ul>
+</li>
 </ol>
 <h2>Education</h2>
 <p>B.S., Statistics, <a href="https://www.csu.edu.cn/">Central South University</a>, Changsha, China, 09.2018-06.2022</p>
 <ul>
-<li><p>Main Courses: Mathematical Analysis, Advanced Algebra, Multivariate Statistics, Stochastic Process, Statistical Software Analysis, Regression Analysis, R Programming, Python Programming</p>
-</li>
+<li><p>Main Courses: Mathematical Analysis, Advanced Algebra, Multivariate Statistics, Stochastic Process, Statistical Software Analysis, Regression Analysis, R Programming, Python Programming</p></li>
 </ul>
 <p>M.S., Statistics, <a href="https://www.btbu.edu.cn/">Beijing Technology and Business University</a>, Beijing, China, 09.2023-Expected 06.2025</p>
 <ul>
-<li><p>Main Courses: Advanced Mathematical Statistics, Causal Inference, Semiparametric Theory and Missing Data, Asymptotic Theory, Time Series Analysis, Complex Data Analysis, Applied Stochastic Process</p>
-</li>
+<li><p>Main Courses: Advanced Mathematical Statistics, Causal Inference, Semiparametric Theory and Missing Data, Asymptotic Theory, Time Series Analysis, Complex Data Analysis, Applied Stochastic Process</p></li>
 </ul>
 <h2>Honors and Awards</h2>
+<ol>
 <h3>Graduate Honors (Beijing Technology and Business University)</h3>
 <ul>
 <li><p>Outstanding Student Awards and Scholarships</p>
@@ -130,7 +119,6 @@ I currently hope to combine FDR control and causal inference, please contact me 
 <li>Outstanding Graduation Project</li>
 </ul>
 </ol>
-<p><br />
 </td>
 </tr>
 </table>
