--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 <li><p>Causal Inference:
     <ul>
     <li>Proximal Causal Inference</li>
-    <li>Semiparametric Theory</li>
+    <li>Asymptotic Theory</li>
     <li>Bi-direction Casual Model</li>
     </ul>
 </p></li>
