--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 <li><p>Causal Inference:
     <ul>
     <li>Proximal Causal Inference</li>
-    <li>Asymptotic Theory</li>
+    <li>Covariate adjustment</li>
     <li>Bi-direction Casual Model</li>
     </ul>
 </p></li>
@@ -60,7 +60,7 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 <ol>
 <li><p>Shanshan Luo#, <b>Jiaqi Min</b>, Wei Li, Xueli Wang*, Zhi Geng,  "<a href="https://www.sciencedirect.com/science/article/abs/pii/S0167947324001634">A comparative analysis of different adjustment sets using propensity score based estimators</a>",  <i>Computational Statistics & Data Analysis</i> , 2024.</p></li>
 </ol>
-<p><b>Note</b>: # indicates my advisor.</p>
+<p><b>Note</b>: # indicates the advisor.</p>
 <p><b>Note</b>: * indicates the corresponding author.</p>
 <h2>Projects</h2>
 <ol>
