--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 <ul>
 <li><p>Causal Inference:
     <ul>
-    <li>Proximal Causal Inference</li>
+    <li>Proximal causal inference</li>
     <li>Covariate adjustment</li>
-    <li>Bi-direction Casual Model</li>
+    <li>Semiparametric inference and asymptotic theory</li>
+    <li>Bi-direction causal model</li>
     </ul>
 </p></li>
 <li><p>False Discovery Rate (FDR) Control</p></li>
