--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Beijing, China, 102488 <br />
 E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I received my B.S. degree in Statistics from Central South University in 2022, and I am currently pursuing my M.S. degree in Statistics at Beijing Technology and Business University (expected graduation in 2025). My research primarily focuses on causal inference, with particular emphasis on causal effect identification and estimation in the presence of unmeasured confounding.</p>
+<p>I received my B.S. degree in Statistics from Central South University in 2022, and I am currently pursuing my M.S. degree, advised by Lecturer.<a href="https://shanshanluo.cn/">Shanshan Luo and Prof.<a href="https://stxy.btbu.edu.cn/szdw/yytjxsz/jsyytjx/008558e34652429397cacfe1061299cc.htm">Zhi Geng in Statistics at Beijing Technology and Business University (expected graduation in 2025). My research primarily focuses on causal inference, with particular emphasis on causal effect identification and estimation in the presence of unmeasured confounding.</p>
 <p>I currently hope to combine FDR control and causal inference, please contact me if you are interested.</p>
 <h2>Research</h2>
 <h3>Research interests</h3>
@@ -61,8 +61,8 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 <ol>
 <li><p>Shanshan Luo#, <b>Jiaqi Min</b>, Wei Li, Xueli Wang*, Zhi Geng,  "<a href="https://www.sciencedirect.com/science/article/abs/pii/S0167947324001634">A comparative analysis of different adjustment sets using propensity score based estimators</a>",  <i>Computational Statistics & Data Analysis</i> , 2024.</p></li>
 </ol>
-<p><b>Note</b>: # indicates the advisor.</p>
-<p><b>Note</b>: * indicates the corresponding author.</p>
+<p><b>Note</b>: # the advisor.</p>
+<p><b>Note</b>: * the corresponding author.</p>
 <h2>Projects</h2>
 <ol>
 <li><p>COVID-19 Data Visualization Platform Based on R Shiny, 09.2020-12.2020</p>
