--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 </td></tr></table>
 <h2>About me</h2>
 <p>I received my B.S. degree in Statistics from Central South University in 2022, and I am currently pursuing my M.S. degree, advised by Lecturer.<a href="https://shanshanluo.cn/">Shanshan Luo </a>  and Prof.<a href="https://stxy.btbu.edu.cn/szdw/yytjxsz/jsyytjx/008558e34652429397cacfe1061299cc.htm">Zhi Geng</a> in Statistics at Beijing Technology and Business University (expected graduation in 2025). My research primarily focuses on causal inference, with particular emphasis on causal effect identification and estimation in the presence of unmeasured confounding.</p>
-<p>I currently hope to combine FDR control and causal inference, please contact me if you are interested.</p>
+<p>I am also interested in combining FDR control with causal inference .</p>
 <h2>Research</h2>
 <h3>Research interests</h3>
 <ul>
