--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@ Beijing, China, 102488 <br />
 E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I received my B.S. degree in Statistics from Central South University in 2022. Now, I am pursuing my M.S. degree and advised by Lecturer.<a href="https://shanshanluo.cn/">Shanshan Luo </a>  and Prof.<a href="https://stxy.btbu.edu.cn/szdw/yytjxsz/jsyytjx/008558e34652429397cacfe1061299cc.htm">Zhi Geng</a> in Statistics at Beijing Technology and Business University (expected graduation in 2025). My research primarily focuses on causal inference, with particular emphasis on causal effect identification and estimation in the presence of unmeasured confounding.</p>
-<p>I am also interested in combining FDR control with causal inference .</p>
+<p>I received my B.S. degree in Statistics from Central South University in 2022. Now, I am pursuing my M.S. degree and advised by Lecturer.<a href="https://shanshanluo.cn/">Shanshan Luo </a>  and Prof.<a href="https://stxy.btbu.edu.cn/szdw/yytjxsz/jsyytjx/008558e34652429397cacfe1061299cc.htm">Zhi Geng</a> in Statistics at Beijing Technology and Business University (expected graduation in 2026.06). My research primarily focuses on causal inference, with particular emphasis on causal effect identification and estimation in the presence of unmeasured confounding.</p>
 <h2>Research</h2>
 <h3>Research interests</h3>
 <ul>
@@ -42,9 +41,9 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
     <li>Covariate adjustment</li>
     <li>Semiparametric inference and asymptotic theory</li>
     <li>Bi-direction causal model</li>
+    <li>Missing data</li>
     </ul>
 </p></li>
-<li><p>False Discovery Rate (FDR) Control</p></li>
 </ul>
 
 <h3>Working papers</h3>
@@ -55,7 +54,7 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 
 <h3>Under review</h3>
 <ol>
-<li><p>To be continued</p></li>
+<li><p><b>Jiaqi Min</b>, Xueyue Zhang, Shanshan Luo#, A Regression Framework for Bidirectional Proximal Causal Inference</p></li>
 </ol>
 <h3>Recent publications </h3>
 <ol>
