--- a/index.html
+++ b/index.html
@@ -37,29 +37,24 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 <ul>
 <li><p>Causal Inference:
     <ul>
-    <li>Proximal causal inference</li>
-    <li>Covariate adjustment</li>
+    <li>Causal effect: covariate adjustment, proximal causal inference, instrumental variable, propensity score, spillover/interference effect, bi-direction causal effect</li>
     <li>Semiparametric inference and asymptotic theory</li>
-    <li>Bi-direction causal model</li>
-    <li>Missing data</li>
+    <li>Missing data: missing not at random data</li>
     </ul>
 </p></li>
 </ul>
 
-<h3>Working papers</h3>
-<ul>
-<li><p>Bidirectional Causal Inference with Application</p></li>
-<li><p>Identification and Estimation of Causal Effects in the Presence of Uninformative Contaminated Data</p></li>
-</ul>
+
+<h3>Recent publications </h3>
+<ol>
+<li><p>Shanshan Luo#, <b>Jiaqi Min</b>, Wei Li, Xueli Wang*, Zhi Geng,  "<a href="https://www.sciencedirect.com/science/article/abs/pii/S0167947324001634">A comparative analysis of different adjustment sets using propensity score based estimators</a>",  <i>Computational Statistics & Data Analysis</i> , 2024.</p></li>
+</ol>
 
 <h3>Under review</h3>
 <ol>
 <li><p><b>Jiaqi Min</b>, Xueyue Zhang, Shanshan Luo#, A Regression Framework for Bidirectional Proximal Causal Inference</p></li>
 </ol>
-<h3>Recent publications </h3>
-<ol>
-<li><p>Shanshan Luo#, <b>Jiaqi Min</b>, Wei Li, Xueli Wang*, Zhi Geng,  "<a href="https://www.sciencedirect.com/science/article/abs/pii/S0167947324001634">A comparative analysis of different adjustment sets using propensity score based estimators</a>",  <i>Computational Statistics & Data Analysis</i> , 2024.</p></li>
-</ol>
+
 <p><b>Note</b>: # the advisor.</p>
 <p><b>Note</b>: * the corresponding author.</p>
 <h2>Projects</h2>
