--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 
 <h3>Under review</h3>
 <ol>
-<li><p><b>Jiaqi Min</b>, Xueyue Zhang, Shanshan Luo#, A Regression Framework for Bidirectional Proximal Causal Inference</p></li>
+<li><p><b>Jiaqi Min</b>, Xueyue Zhang, Shanshan Luo#*, A Regression Framework for Bidirectional Proximal Causal Inference</p></li>
 </ol>
 
 <p><b>Note</b>: # the advisor.</p>
