--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="https://scholar.google.com.hk/citations?user=xaS70k0AAAAJ&hl=zh-CN">Google Scholar</a></div>
-<div class="menu-item"><a href="https://github.com/Fhoneysuckle">GitHub</a></div>
+<div class="menu-item"><a href="https://github.com/Jiaqi-Min">GitHub</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
