--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 <ul>
 <li><p>Causal Inference:
     <ul>
-    <li>Causal effect: covariate adjustment, proximal causal inference, instrumental variable, propensity score, spillover/interference effect, bi-direction causal effect</li>
-    <li>Semiparametric inference and asymptotic theory</li>
-    <li>Missing data: missing not at random data</li>
+    <li>Causal effect: spillover/interference effect, covariate adjustment, proximal causal inference, instrumental variable,  bidirectional causal effect, nonignorable missing data, and data fusion</li>
+    <li>Semiparametric methods: effective influence function theory and asymptotic property analysis</li>
     </ul>
 </p></li>
 </ul>
