--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 
 <h3>Recent publications </h3>
 <ol>
-<li><p>Shanshan Luo#, <b>Jiaqi Min</b>, Wei Li, Xueli Wang*, Zhi Geng,  "<a href="https://www.sciencedirect.com/science/article/abs/pii/S0167947324001634">A comparative analysis of different adjustment sets using propensity score based estimators</a>",  <i>Computational Statistics & Data Analysis</i> , 2024.</p></li>
+<li><p>Shanshan Luo#, <b>Jiaqi Min</b>, Wei Li, Xueli Wang*, Zhi Geng,  "<a href="https://www.sciencedirect.com/science/article/abs/pii/S0167947324001634">A comparative analysis of different adjustment sets using propensity score based estimators</a>",  <i>Computational Statistics & Data Analysis</i> , 2025; 203: 108079.</p></li>
 </ol>
 
 <h3>Under review</h3>
 <ol>
-<li><p><b>Jiaqi Min</b>, Xueyue Zhang, Shanshan Luo#*, A Regression Framework for Bidirectional Proximal Causal Inference</p></li>
+<li><p><b>Jiaqi Min</b>, Xueyue Zhang, Shanshan Luo#*, A regression based approach for bidirectional proximal causal inference in the presence of unmeasured confounding, Under Review by <i>Journal of the Royal Statistical Society Series A: Statistics in Society<i>, 2025</p></li>
 </ol>
 
 <p><b>Note</b>: # the advisor.</p>
