--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 </ul>
 </li>
 </ol>
-<h2>Education</h2>
+<h2>Courses</h2>
 <p>B.S., Statistics, <a href="https://www.csu.edu.cn/">Central South University</a>, Changsha, China, 09.2018-06.2022</p>
 <ul>
 <li><p>Main Courses: Mathematical Analysis, Advanced Algebra, Multivariate Statistics, Stochastic Process, Statistical Software Analysis, Regression Analysis, R Programming, Python Programming</p></li>
@@ -85,9 +85,9 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 <ul>
 <li><p>Outstanding Student Awards and Scholarships</p>
 <ul>
-<li>Second-Class Graduate Student Scholarship, 2023-2024</li>
-<li>Second-Class Freshman Scholarship, 2023</li>
-<li>Outstanding Student Award, 2024</li>
+<li>Second-Class Freshman Merit Scholarship, 2023-2024</li>
+<li>Second-Class Merit Scholarship, 2023</li>
+<li>Merit Student Award, 2024</li>
 </ul>
 </li>
 <li><p>Academic Competitions</p>
@@ -101,7 +101,7 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 <ul>
 <li>Second-Class Scholarship, 2018-2019</li>
 <li>Third-Class Scholarship, 2019-2020, 2020-2021</li>
-<li>Outstanding Graduation Project</li>
+<li>Outstanding Graduation Project, 2022</li>
 </ul>
 </ol>
 </td>
