--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 <li>Outstanding Graduation Project, 2022</li>
 </ul>
 </ol>
+
+<h2>Blog</h2>
+<div style="border-left: 4px solid #0066cc; padding-left: 20px; margin-bottom: 20px;">
+    <p style="margin-bottom: 10px; color: #666; font-size: 14px;">June 2025</p>
+    <p>It's graduation season again. Next year, I will also wear my graduation cap. Hope everyone can have a bright future.</p>
+</div>
+<p style="margin-top: 30px; font-style: italic; color: #666; text-align: center; border-top: 1px solid #eee; padding-top: 20px;">
+    "Life may not always go as we wish, but may we live with a clear conscience."
+</p>
+ 
 </td>
 </tr>
 </table>
