--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 <div style="border-left: 4px solid #0066cc; padding-left: 20px; margin-bottom: 20px;">
     <p style="margin-bottom: 10px; color: #666; font-size: 14px;">June 2025</p>
     <p>It's graduation season again. Next year, I will also wear my graduation cap. Hope everyone can have a bright future.</p>
+    <div style="text-align: center; margin-top: 15px;">
+        <img src="photos/DSC_2958.jpg" alt="Graduation Season" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);" />
+    </div>
 </div>
 <p style="margin-top: 30px; font-style: italic; color: #666; text-align: center; border-top: 1px solid #eee; padding-top: 20px;">
     "Life may not always go as we wish, but may we live with a clear conscience."
