--- a/index.html
+++ b/index.html
@@ -105,6 +105,45 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 </ul>
 </ol>
 
+<h2>Language and Skills</h2>
+<table style="width: 100%; border-collapse: collapse;">
+<tr>
+    <td style="padding: 8px 0; vertical-align: top;">
+        <p><b>IELTS (Academic): 7</b> (overall score)<br />
+        Listening: 6.5 | Reading: 8.5 | Speaking: 6.0 | Writing: 6.0<br />
+        <i>Date: 2024.08</i></p>
+    </td>
+    <td style="padding: 8px 0; text-align: right; vertical-align: top;">
+        <p><b>English</b></p>
+    </td>
+</tr>
+</table>
+
+<table style="width: 100%; border-collapse: collapse; margin-top: 10px;">
+<tr>
+    <td style="padding: 8px 0;">
+        <p><b>Programming:</b> R, Python, PostgreSQL</p>
+    </td>
+</tr>
+</table>
+
+<table style="width: 100%; border-collapse: collapse; margin-top: 10px;">
+<tr>
+    <td style="padding: 8px 0;">
+        <p><b>Database:</b> MIMIC-III, MIMIC-IV, MIMIC-CXR, eICU (PhysioNet licensed access)</p>
+    </td>
+</tr>
+</table>
+
+<table style="width: 100%; border-collapse: collapse; margin-top: 10px;">
+<tr>
+    <td style="padding: 8px 0;">
+        <p><b>Photography:</b> Portrait, Landscape (styles); Lightroom, PixCake (post-processing)</p>
+    </td>
+</tr>
+</table>
+
+  
 <h2>Blog</h2>
 <div style="border-left: 4px solid #0066cc; padding-left: 20px; margin-bottom: 20px;">
     <p style="margin-bottom: 10px; color: #666; font-size: 14px;">June 2025</p>
