--- a/index.html
+++ b/index.html
@@ -106,42 +106,13 @@ E-mail: <a href="mailto:jiaqimin@st.btbu.edu.cn">jiaqimin@st.btbu.edu.cn</a></p>
 </ol>
 
 <h2>Language and Skills</h2>
-<table style="width: 100%; border-collapse: collapse;">
-<tr>
-    <td style="padding: 8px 0; vertical-align: top;">
-        <p><b>IELTS (Academic): 7</b> (overall score)<br />
-        Listening: 6.5 | Reading: 8.5 | Speaking: 6.0 | Writing: 6.0<br />
-        <i>Date: 2024.08</i></p>
-    </td>
-    <td style="padding: 8px 0; text-align: right; vertical-align: top;">
-        <p><b>English</b></p>
-    </td>
-</tr>
-</table>
-
-<table style="width: 100%; border-collapse: collapse; margin-top: 10px;">
-<tr>
-    <td style="padding: 8px 0;">
-        <p><b>Programming:</b> R, Python, PostgreSQL</p>
-    </td>
-</tr>
-</table>
-
-<table style="width: 100%; border-collapse: collapse; margin-top: 10px;">
-<tr>
-    <td style="padding: 8px 0;">
-        <p><b>Database:</b> MIMIC-III, MIMIC-IV, MIMIC-CXR, eICU (PhysioNet licensed access)</p>
-    </td>
-</tr>
-</table>
-
-<table style="width: 100%; border-collapse: collapse; margin-top: 10px;">
-<tr>
-    <td style="padding: 8px 0;">
-        <p><b>Photography:</b> Portrait, Landscape (styles); Lightroom, PixCake (post-processing)</p>
-    </td>
-</tr>
-</table>
+<ul>
+<li><p><b>IELTS (Academic): 7</b> (overall score) - English<br />
+Listening: 6.5 | Reading: 8.5 | Speaking: 6.0 | Writing: 6.0 (Date: 2024.08)</p></li>
+<li><p><b>Programming:</b> R, Python, PostgreSQL</p></li>
+<li><p><b>Database:</b> MIMIC-III, MIMIC-IV, MIMIC-CXR, eICU (PhysioNet licensed access)</p></li>
+<li><p><b>Photography:</b> Portrait, Landscape (styles); Lightroom, PixCake (post-processing)</p></li>
+</ul>
 
   
 <h2>Blog</h2>
